--- a/src/Chapter_A3.tex
+++ b/src/Chapter_A3.tex
@@ -80,11 +80,11 @@ When the zoom level is so low that several tracks coalesce, they are drawn as a 
 
 You probably noticed that some spots are painted differently from their neighbors. 
 Mastodon manages three special collections of spots and links to facilitate making sense of the data across views:
-\begin{myitemize}
+\begin{itemize}
     \item the \textbf{selection}, painted in green, that manages a classical selection of spots and links;
     \item the \textbf{highlight}, used to highlight the spot or link currently under the mouse;
     \item the \textbf{focus}, particularly used in TrackScheme, to indicate what spot is currently focused on by the keyboard interaction.
-\end{myitemize}
+\end{itemize}
 
 \noindent We will first present the focus (see Table~\ref{tab:MastodonTrackSchemeFocusKeys}). 
 
