--- a/src/Chapter_A4.tex
+++ b/src/Chapter_A4.tex
@@ -25,13 +25,13 @@ However to facilitate orienting yourself, or retrieving a key point in the data,
 The bookmarks were already implemented in the \bdv tool itself before its use in Mastodon.
 They let you store a position and orientation in space as bookmarks. 
 You can later call them again and retrieve said position. 
-\begin{myitemize}
+\begin{itemize}
     \item First move to the position and orientation you want to store in a bookmark.
     \item Then press \keys{\shift+B}. You should see a message prompting you to press another key (Figure~\ref{fig:BDVSettingBookmark}).
     \item Pick one and press it. This key will be used as a tag for this bookmark.
     \item To later retrieve the position and orientation of this bookmark, press \keys{B} then the bookmark's key. The view should animate and restore the stored position and time-point.
     \item \keys{O} does the same things, but only restore the bookmark orientation, not its position.
-\end{myitemize}
+\end{itemize}
 
 You can have many bookmarks, all identified by the key you press after the bookmark command.
 Bookmarks are saved with the BDV settings file that also saves the channel color and display range.
