--- a/src/Preamble.tex
+++ b/src/Preamble.tex
@@ -2,15 +2,15 @@
 
 This document constitutes the \wikilink{Mastodon}{Mastodon} documentation. 
 It is divided in four parts, that group sections by interest.
-\begin{myitemize}
+\begin{itemize}
 	
 	\item The first part contains three tutorials, aimed at end-users and focused on cell tracking.
 	They are meant to guide users with the Mastodon software and cover three applications of cell tracking Mastodon:
-	\begin{myitemize}
+	\begin{itemize}
 		\item automated cell or particle tracking;
 		\item manual curation and correction of tracking results;
 		\item manual and semi-automatic tracking.
-	\end{myitemize}
+	\end{itemize}
 	
 	\item The second part contains technical information. ...
 	
@@ -18,4 +18,4 @@ It is divided in four parts, that group sections by interest.
 	
 	\item The last part is made of tutorials aimed at Java developers ...
 	
-\end{myitemize}
+\end{itemize}
