--- a/src/TableBDVNavigationKeys.tex
+++ b/src/TableBDVNavigationKeys.tex
@@ -15,11 +15,11 @@
     
     Align view with X / Y / Z axes. &  
     \begin{minipage}[t]{0.7\textwidth}
-    \begin{myitemize}
+    \begin{itemize}
         \item  Align with XY plane: \keys{\shift+Z}
         \item Align with YZ plane: \keys{\shift+X}
         \item Align with XZ plane: \keys{\shift+C} or \keys{\shift+Y} 
-    \end{myitemize}
+    \end{itemize}
     The view will rotate around the location you clicked.
     \end{minipage}
     
