Place holder for a part dedicated to extending Mastodon.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -111,25 +111,33 @@
 \newpage
 \part{Tutorials.}
 
-% Automated tracking.
-\newpage
-\input{src/Chapter_A2.tex}
+% % Automated tracking.
+% \newpage
+% \input{src/Chapter_A2.tex}
 
-% Manual tracking. TrackScheme.
-\newpage
-\input{src/Chapter_A3.tex}
+% % Manual tracking. TrackScheme.
+% \newpage
+% \input{src/Chapter_A3.tex}
 
-% Orienting in Mastodon.
-\newpage
-\input{src/Chapter_A4.tex}
+% % Orienting in Mastodon.
+% \newpage
+% \input{src/Chapter_A4.tex}
 
-% Feature, tags and tables.
-\newpage
-\input{src/Chapter_A5.tex}
+% % Feature, tags and tables.
+% \newpage
+% \input{src/Chapter_A5.tex}
 
 % Semi automated-tracking.
 \newpage
 \input{src/Chapter_A6.tex}
+
+
+
+\newpage
+\part{Extending Mastodon.}
+\vfill
+
+
 
 
 \newpage
