Import Tobias article about the search on convex polytopes.
This chapter still needs an introduction for the readership of the manual.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -1,6 +1,6 @@
 \documentclass{scrartcl}
 
-% Tickz
+% Tickz.
 \usepackage{tikz}
 \usetikzlibrary{shapes}
 \usetikzlibrary{arrows}
@@ -12,7 +12,10 @@
 \usetikzlibrary{backgrounds}
 \usetikzlibrary{matrix}
 
-% Fonts
+% Algorithms.
+\usepackage[vlined,ruled]{algorithm2e}
+
+% Fonts.
 \usepackage{libertine} 
 \usepackage[libertine]{newtxmath}
 \renewcommand{\familydefault}{\sfdefault}
@@ -36,11 +39,11 @@
 \PassOptionsToPackage{hyphens}{url}
 \usepackage[htt]{hyphenat}
 
-% Colored links
+% Colored links.
 \newcommand\coloredlink[1]{\textcolor{blue!75!black}{\underline{\smash{#1}}}}
 \newcommand\wikilink[2]{\href{http://imagej.net/#1}{\coloredlink{#2}}}
 
-% Epigraph
+% Epigraph.
 \usepackage{epigraph}
 
 % Test math symbols.
@@ -152,8 +155,11 @@ Dieu en aura plus tost de vous merciz.}
 
 % The graph of Mastodon
 \newpage
-\input{src/Chapter_B1.tex}
+\input{src/Chapter_C2.tex}
 
+% KD-tree searched on Convex polytopes.
+\newpage
+\input{src/Chapter_C3.tex}
 
 
 
