--- a/References.bib
+++ b/References.bib
@@ -1,3 +1,22 @@
+@article{ImgLib2paper,
+    author = {Pietzsch, Tobias and Preibisch, Stephan and Tomančák, Pavel and Saalfeld, Stephan},
+    title = "{ImgLib2—generic image processing in Java}",
+    journal = {Bioinformatics},
+    volume = {28},
+    number = {22},
+    pages = {3009-3011},
+    year = {2012},
+    month = {09},
+    abstract = "{Summary: ImgLib2 is an open-source Java library for n-dimensional data representation and manipulation with focus on image processing. It aims at minimizing code duplication by cleanly separating pixel-algebra, data access and data representation in memory. Algorithms can be implemented for classes of pixel types and generic access patterns by which they become independent of the specific dimensionality, pixel type and data representation. ImgLib2 illustrates that an elegant high-level programming interface can be achieved without sacrificing performance. It provides efficient implementations of common data types, storage layouts and algorithms. It is the data model underlying ImageJ2, the KNIME Image Processing toolbox and an increasing number of Fiji-Plugins.Availability: ImgLib2 is licensed under BSD. Documentation and source code are available at http://imglib2.net and in a public repository at https://github.com/imagej/imglib.Supplementary Information:Supplementary data are available at Bioinformatics Online.Contact: saalfeld@mpi-cbg.de}",
+    issn = {1367-4803},
+    doi = {10.1093/bioinformatics/bts543},
+    url = {https://doi.org/10.1093/bioinformatics/bts543},
+    eprint = {https://academic.oup.com/bioinformatics/article-pdf/28/22/3009/16908600/bts543.pdf},
+}
+
+
+
+
 @article{TGMMpaper,
    author = {Amat, Fernando and Lemon, William and Mossing, Daniel P. and McDole, Katie and Wan, Yinan and Branson, Kristin and Myers, Eugene W. and Keller, Philipp J.},
    title = {Fast, accurate reconstruction of cell lineages from large-scale fluorescence microscopy data},
