Move the description of the update mechanism to the technical part.
And flesh it out with an example.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -127,8 +127,8 @@
 % \input{src/Chapter_A4.tex}
 
 % % Feature, tags and tables.
-% \newpage
-% \input{src/Chapter_A5.tex}
+\newpage
+\input{src/Chapter_A5.tex}
 
 % Semi automated-tracking.
 \newpage
@@ -153,7 +153,12 @@ Car, se pitié de nous pauvres avez, \\
 Dieu en aura plus tost de vous merciz.}
 }{Francois Villon}
 
-% The graph of Mastodon
+
+% The feature update mechanism.
+\newpage
+\input{src/Chapter_C1.tex}
+
+% The graph of Mastodon.
 \newpage
 \input{src/Chapter_C2.tex}
 
